--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,7 +1,32 @@
 
       
       /* contact  */
-      .contact-grid{
+
+      .contact-grid{      
+        display:grid;
+        position: relative;
+        grid-template-columns: 1fr 1fr ;
+        
+        margin-top: 0px;
+        margin-bottom: 0px;
+        margin-right: 200px;
+        margin-left: 200px;
+        row-gap: 30px;
+        column-gap: 40px;
+        background-color: rgb(214, 227, 227,0.5);
+        padding:10px;
+        z-index:  20;        
+        /* try - from w3 schools shadows */
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        box-shadow: gray 0px 0px 7px 2px;
+        box-sizing: border-box;
+        }
+
+
+      .old-contact-grid{
         display:grid;
         grid-template-columns: 1fr 1fr;
         grid-row: 1fr 1fr 1fr 1fr 1fr;
@@ -12,8 +37,7 @@
         row-gap: 20px;
         column-gap: 20px;
         z-index:1;
-        
-      }
+        }
 
 
       .contact-title{
