--- a/styles/team.css
+++ b/styles/team.css
@@ -1,7 +1,8 @@
 
 .team-photo-container-mar23{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 4fr 1fr;
+  place-items: center;
   margin-top: 0px;
   margin-bottom: 60px;
   margin-right: 100px;
