--- a/styles/contact.css
+++ b/styles/contact.css
@@ -9,13 +9,14 @@
         
         margin-top: 0px;
         margin-bottom: 0px;
-        margin-right: 200px;
-        margin-left: 200px;
+        margin-right: 10%;
+        margin-left: 10%;
         row-gap: 30px;
         column-gap: 40px;
         background-color: rgb(214, 227, 227,0.1);
         padding:10px;
-        z-index:  20;        
+        z-index:  20;       
+        
         /* try - from w3 schools shadows */
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
@@ -23,6 +24,7 @@
         border-top-right-radius: 5px;
         box-shadow: gray 0px 0px 7px 2px;
         box-sizing: border-box;
+
         }
 
 
@@ -66,5 +68,6 @@
         margin-top: 10px;
         margin-bottom: 10px;
         margin-bottom: 0px;
+        line-height: auto;
        
       }
