--- a/styles/services.css
+++ b/styles/services.css
@@ -12,8 +12,8 @@
       
       margin-top: 0px;
       margin-bottom: 0px;
-      margin-right: 200px;
-      margin-left: 200px;
+      margin-right: 15%;
+      margin-left: 15%;
       row-gap: 30px;
       column-gap: 40px;
       background-color: rgb(214, 227, 227,0.1);
