--- a/styles/team.css
+++ b/styles/team.css
@@ -5,8 +5,8 @@
   place-items: center;
   margin-top: 0px;
   margin-bottom: 60px;
-  margin-right: 100px;
-  margin-left: 100px;
+  margin-right: 25%;
+  margin-left: 25%;
   border-style: none;
   z-index:  30;
   }
@@ -31,8 +31,8 @@
   grid-template-columns: 1fr 4fr ;
   margin-top: 0px;
   margin-bottom: 0px;
-  margin-right: 100px;
-  margin-left: 100px;
+  margin-right: 10%;
+  margin-left: 10%;
   row-gap: 30px;
   column-gap: 40px;
   background-color: rgb(214, 227, 227, 0.1);
