--- a/styles/home.css
+++ b/styles/home.css
@@ -44,7 +44,7 @@
 
   .team-photo-container{
     display: grid;
-    grid-template-columns: 1fr 1fr  1fr 5fr 1fr 1fr 1fr;
+    grid-template-columns:   1fr 3fr 1fr;
     place-items: center;
     margin-top: 0px;
     margin-bottom:20px;
@@ -64,4 +64,29 @@
   
    }
 
-   
+   .ncoss-text1{
+    font-family: roberto,arial;
+    color:grey;    
+    font-weight: bold;
+    line-height: 25px;
+    text-align:center;
+    margin-bottom: 20px;
+    word-spacing: 4px;
+    margin-left: 10px;
+    margin-right:10px;
+    padding: 20px;
+    z-index:1;
+    font-size:60px;
+   }
+
+   .ncoss-text2{
+    font-family: roberto,arial;
+    font-size:15px;
+    font-weight: 500;
+    line-height:2px;
+    margin-bottom: 0px;
+    word-spacing: 4px;    
+    padding: 0px;
+    z-index:1;
+    
+   }
