--- a/styles/home.css
+++ b/styles/home.css
@@ -66,26 +66,27 @@
 
    .ncoss-text1{
     font-family: roberto,arial;
-    color:grey;    
-    font-weight: bold;
+    font-size:70px;
+    color:rgba(128, 128, 128, 0.644);    
+    font-weight: 500;
     line-height: 25px;
     text-align:center;
     margin-bottom: 20px;
     word-spacing: 4px;
-    margin-left: 10px;
+    margin-left: 0px;
     margin-right:10px;
     padding: 20px;
     z-index:1;
-    font-size:60px;
+    
    }
 
    .ncoss-text2{
     font-family: roberto,arial;
-    font-size:15px;
+    font-size:13px;
     font-weight: 500;
     line-height:2px;
     margin-bottom: 0px;
-    word-spacing: 4px;    
+    word-spacing: 1px;    
     padding: 0px;
     z-index:1;
     
