--- a/styles/annual.css
+++ b/styles/annual.css
@@ -5,18 +5,17 @@
   display:grid;
   position: relative;
   grid-template-columns: 1fr 4fr ;
-  
   margin-top: 0px;
   margin-bottom: 0px;
-  margin-right: 15%;
-  margin-left: 15%;
-  row-gap: 30px;
-  column-gap: 40px;
+  margin-right: 10%;
+  margin-left: 10%;
+  row-gap: 0px;
+  column-gap: 10px;
   background-color: rgb(214, 227, 227, 0.1); 
   padding:10px;
   z-index:  20;
   
-  /* try - from w3 schools shadows */
+  /* shadow boxs */
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   border-top-left-radius: 5px;
@@ -53,7 +52,7 @@
     font-family: Arial;
     font-weight: bold;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 20px;
     
     width: 100%;
     margin-top: 10px;
